<resources>
    <string name="app_name">myVet</string>

    <!-- General -->
    <string name="lorem_ipsum">Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. </string>
    <string name="continue_btn">Συνέχεια</string>
    <string name="cancel">Άκυρο</string>
    <string name="save">Αποθήκευση</string>
    <string name="no_results_text">Δεν βρέθηκαν αποτελέσματα</string>

    <!-- Login Screen -->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Κωδικός Πρόσβασης</string>
    <string name="login_btn_text">Σύνδεση</string>
    <string name="register_btn_text">Δεν έχεις λογαριασμό; <b>Εγγραφή</b></string>

    <!-- Register Screen -->
    <string name="confirm_pass_hint">Επιβεβαίωση Κωδικού Πρόσβασης</string>
    <string name="register_btn">Εγγραφή</string>

    <!-- Onboarding -->
    <string name="pre_home_additionals_title">Πρόσθετες Πληροφορίες</string>
    <string name="additionals_subheader">Συμπλήρωσε τα στοιχεία του προφίλ σου</string>
    <string name="username">Username</string>

    <!-- Main Screen Titles -->
    <string name="home_title">Αρχική</string>
    <string name="vets_title">Κτηνίατροι</string>
    <string name="appointments_title">Ραντεβού</string>
    <string name="profile_title">Προφίλ</string>

    <!-- Home Screen -->
    <string name="home_user_greeting">Καλησπέρα</string>
    <string name="home_announcements">Ανακοινώσεις</string>
    <string name="home_popular">Δημοφιλή αποτελέσματα</string>

    <!-- Vets Screen -->
    <string name="vet_details_title">Πληροφορίες</string>
    <string name="search_action">Search</string>
    <string name="dummy_doc_fullname">Manthos Foustanos</string>
    <string name="dummy_doc_category">VET</string>
    <string name="doc_experience">Experience</string>
    <string name="dummy_doc_experience">10 years</string>
    <string name="working_experience">%d years</string>
    <string name="dummy_rating">4.3/5</string>
    <string name="vet_rating_placeholder">%s/5</string>

    <!-- Pets Screen -->
    <string name="nav_pets">Κατοικίδια</string>
    <string name="pets_title">Κατοικίδια</string>
    <string name="dummy_pet_nickname">Μάκης</string>
    <string name="dummy_pet_type">Γάτα</string>

    <!-- Add new pet screen -->
    <string name="add_new_pet_title">Προσθήκη Νέου Κατοικιδίου</string>
    <string name="pet_name">Όνομα κατοικιδίου</string>
    <string name="pet_category">Κατηγορία</string>
    <string name="pet_details_title">Πληροφορίες</string>

    <!-- Edit pet screen -->
    <string name="edit_pet_info">Επεξεργασία Κατοικιδίου</string>

    <!-- Pet Result Screen -->
    <string name="pet_result_title">Το κατοικίδιο αποθηκεύτηκε</string>
    <string name="pet_result_update_title">Το κατοικίδιο ανανεώθηκε</string>
    <string name="pet_result_desc">Το κατοικίδιο σου προστέθηκε στην λίστα σου. Θα μπορείς να το διαχειριστείς απο την οθόνη κατοικιδίων.</string>
    <string name="pet_result_update_desc">Οι πληροφορίες του κατοικιδίου σου ανανεώθηκαν στην καρτέλα. Θα μπορείς να το διαχειριστείς απο την οθόνη κατοικιδίων.</string>
    <string name="return_to_home">Επιστροφή στην αρχική</string>

    <!-- My Appointments -->
    <string name="my_appointments_title">Τα ραντεβού μου</string>

    <!-- Vet Details Screen -->
    <string name="vet_reviews">Κριτικές</string>
    <string name="vet_reviews_placeholder">Διάβασε τι λένε οι χρήστες μας για τον %1s</string>
    <string name="vet_appointment">Ραντεβού</string>
    <string name="vet_appointment_desc">Επιθυμείς να κλείσεις ραντεβού με τον κτηνίατρο;</string>
    <string name="vet_appointment_btn">Κλείσε ραντεβού</string>

    <!-- Profile Screen -->
    <string name="profile_dummy_username">foustanos</string>
    <string name="profile_option_title">title</string>
    <string name="profile_option_value">value</string>
    <string name="profile_option_missing">Δεν έχει δωθεί</string>
    <string name="ask_user_logout">Θέλετε να αποσυνδεθείτε;</string>
    <string name="email">E-mail</string>
    <string name="telephone">Τηλέφωνο</string>
    <string name="first_name">Όνομα</string>
    <string name="last_name">Επώνυμο</string>
    <string name="logout">Αποσύνδεση</string>

    <!--Appointments -->
    <string name="appointment_title">Ορισμός Ραντεβού</string>
    <string name="appointment_month_placeholder">Ραντεβού %s</string>
    <string name="overview_title">Επισκόπηση</string>
    <string name="result_title">Επιτυχία</string>

    <!-- Calendar -->
    <string name="dummy_month_name">Φεβρουάριος</string>
    <string name="appointment_overview">Σύνοψη ραντεβού</string>
    <string name="my_appointment">To Ραντεβού μου</string>
    <string name="dummy_appointment_date">Sunday, 26 February 2023</string>
    <string name="dummy_appointment_time">11:00</string>

    <!-- Appointment Result -->
    <string name="appointment_saved">Το Ραντεβού σου αποθηκεύτηκε</string>
    <string name="appointment_saved_desc">Θα μπορείς πλέον να δεις το ραντεβού σου απο την κατηγορία ραντεβού</string>

    <!-- Appointment Details -->
    <string name="appointment_info_details">Πληροφορίες Ραντεβού</string>
    <string name="appointment_details_bs_title">Θέλετε να ακυρώσετε το ραντεβού;</string>
    <string name="appointment_details_bs_cancel">Ακύρωση</string>

    <!-- Edit Profile Screen -->
    <string name="edit_profile_title">Επεξεργασία Προφίλ</string>

    <!-- Ratings Screen -->
    <string name="ratings_screen_title">Αξιολογήσεις</string>
    <string name="rating_item_title">This is a title</string>
    <string name="rating_item_desc">This is a description</string>

    <!-- New Rating -->
    <string name="new_review_title">Νέα Κριτική</string>
    <string name="title">Τίτλος</string>
    <string name="additional_comments">Επιπλέον Σχόλια</string>
    <string name="total_rating">Συνολική Βαθμολογία</string>
    <string name="add_new_review">Προσθήκη νέας Κριτικής</string>

    <!-- Article WebView Screen -->
    <string name="article_title">Άρθρο</string>

    <!-- Notifications Screen -->
    <string name="notifications_title">Ειδοποιήσεις</string>

</resources>