<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.domain.models.UserInfo" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_l"
        android:paddingHorizontal="@dimen/dimen_10">

        <TextView
            android:id="@+id/usernameTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:text="@{model.username}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTxtView"
            tools:text="@string/profile_option_value" />

        <TextView
            android:id="@+id/telephoneTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_m"
            android:text="@string/telephone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameEditTxt" />

        <EditText
            android:id="@+id/telEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:maxLength="10"
            android:paddingTop="@dimen/dimen_10"
            android:text="@{model.telephone}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telephoneTxtView"
            tools:text="@string/profile_option_value" />

        <TextView
            android:id="@+id/fNameTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_m"
            android:text="@string/first_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telEditTxt" />

        <EditText
            android:id="@+id/fNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:paddingTop="@dimen/dimen_10"
            android:text="@{model.firstName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fNameTxtView"
            tools:text="@string/profile_option_value" />

        <TextView
            android:id="@+id/lNameTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_m"
            android:text="@string/last_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fNameEditTxt"
            app:layout_goneMarginTop="@dimen/dimen_m" />

        <EditText
            android:id="@+id/lNameEditTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height"
            android:text="@{model.lastName}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lNameTxtView"
            tools:text="@string/profile_option_value" />

        <Button
            android:id="@+id/primaryBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/dimen_l"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lNameEditTxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>