<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="sharedViewModel"
            type="com.example.unipivetapp.ui.appointments.AppointmentsSharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_bg"
        android:padding="@dimen/dimen_m"
        tools:context=".ui.appointments.overview.OverviewFragment">

        <TextView
            android:id="@+id/overviewTxtView"
            style="@style/text_18_bold_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appointment_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/vetCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_l"
            app:cardCornerRadius="@dimen/dimen_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overviewTxtView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_m">

                <TextView
                    android:id="@+id/doctorNameTxtView"
                    style="@style/text_18_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_s"
                    android:text="@{sharedViewModel.selectedVet.fullName}"
                    app:layout_constraintEnd_toStartOf="@id/docImgView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/dummy_doc_fullname" />

                <TextView
                    android:id="@+id/docCategoryTxtView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{sharedViewModel.selectedVet.category}"
                    app:layout_constraintEnd_toStartOf="@id/docImgView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/doctorNameTxtView"
                    tools:text="@string/dummy_doc_category" />

                <RatingBar
                    android:id="@+id/docRating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_s"
                    android:progressTint="@color/orange"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/docCategoryTxtView"
                    app:setVetRating="@{sharedViewModel.selectedVet.rating}" />

                <TextView
                    android:id="@+id/docExpHeader"
                    style="@style/text_16_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_10"
                    android:text="@string/doc_experience"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/docRating" />

                <TextView
                    android:id="@+id/docExperience"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/docExpHeader"
                    app:setWorkingExperience="@{sharedViewModel.selectedVet.experience}"
                    tools:text="@string/dummy_doc_experience" />

                <ImageView
                    android:id="@+id/docImgView"
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="0dp"
                    android:contentDescription="@{sharedViewModel.selectedVet.fullName}"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setProfileImage="@{sharedViewModel.selectedVet.image}"
                    tools:src="@drawable/profile_placeholder" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/appointmentCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_l"
            app:cardCornerRadius="@dimen/dimen_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vetCardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dimen_m">

                <TextView
                    android:id="@+id/appointmentTxtView"
                    style="@style/text_18_bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dimen_s"
                    android:text="@string/my_appointment"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTxtView"
                    style="@style/text_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appointmentTxtView"
                    app:setAppointmentDate="@{sharedViewModel.appointment.date}"
                    tools:text="@string/dummy_appointment_date" />

                <TextView
                    android:id="@+id/timeTxtView"
                    style="@style/text_16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dimen_s"
                    android:text="@{sharedViewModel.appointment.timeslot}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateTxtView"
                    tools:text="@string/dummy_appointment_time" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/continueBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/dimen_l"
            android:text="@string/continue_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>