<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_l"
        tools:context=".ui.appointments.result.ResultFragment">

        <ImageView
            android:id="@+id/resultImgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginTop="@dimen/dimen_l"
            android:background="@drawable/ic_appointments"
            android:backgroundTint="@color/grey_dark_bg"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultHeaderTxtView"
            style="@style/text_18_bold_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_l"
            android:text="@string/appointment_saved"
            app:layout_constraintTop_toBottomOf="@id/resultImgView" />

        <TextView
            android:id="@+id/resultDescTxtView"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/appointment_saved_desc"
            app:layout_constraintTop_toBottomOf="@id/resultHeaderTxtView" />

        <Button
            android:id="@+id/continueBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/dimen_l"
            android:text="@string/continue_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>