<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.example.domain.models.UserInfo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners_bottom"
        android:backgroundTint="@color/white"
        android:padding="@dimen/dimen_m">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileUserImgView"
            android:layout_width="@dimen/dimen_1.5xl"
            android:layout_height="@dimen/dimen_1.5xl"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setProfileImage="@{model.userImg}"
            tools:src="@drawable/profile_placeholder" />

        <TextView
            android:id="@+id/greetingTxtView"
            style="@style/text_18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10"
            android:gravity="start"
            android:text="@string/home_user_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileUserImgView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_user_name"
            style="@style/text_18_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_10"
            android:text="@{model.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileUserImgView"
            app:layout_constraintTop_toBottomOf="@id/greetingTxtView"
            tools:text="@string/profile_dummy_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>