<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="action"
            type="com.example.unipivetapp.ui.pets.navigator.PetAction" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_l"
        tools:context=".ui.pets.result.PetResultFragment">

        <ImageView
            android:id="@+id/resultImgView"
            android:layout_width="@dimen/dimen_3xl"
            android:layout_height="@dimen/dimen_3xl"
            android:layout_marginTop="@dimen/dimen_l"
            android:background="@drawable/ic_check"
            android:backgroundTint="@color/green"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultHeaderTxtView"
            style="@style/text_18_bold_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_l"
            app:layout_constraintTop_toBottomOf="@id/resultImgView"
            app:setPetResultTitle="@{action}"
            tools:text="@string/pet_result_title" />

        <TextView
            android:id="@+id/resultDescTxtView"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/resultHeaderTxtView"
            app:setPetResultDesc="@{action}"
            tools:text="@string/pet_result_desc" />

        <Button
            android:id="@+id/continueBtn"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/dimen_l"
            android:text="@string/return_to_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>